# Mutagen

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clippy.toml
.claude/: workflow.json
harness/: ARCHITECTURE.md  ARTIFACT_SCHEMAS.md  Cargo.toml  DEPLOY_DEV.md  QUEUE_SCHEMA.md  README.md  REQUIREMENTS.md  RULE_INVENTORY.md  RUNBOOK.md  SERVICE_INTEGRATION.md  SHREDDER_OUTPUT_SPEC.md  SLICEMAP_SPEC.md  STATE_MACHINE.md  WORKLIST.md  sample-slicemap.md
harness/cli/: Cargo.toml
harness/cli/src/: main.rs
harness/config/: dev.toml
harness/core/: Cargo.toml
harness/core/src/: activation.rs  adapter.rs  amend_scope.rs  cohort.rs  cohort_apply.rs  cohort_dispatch.rs  cohort_reconcile.rs  cohort_worktree.rs  config.rs  dispatch.rs  finalize.rs  lib.rs  model_registry.rs  notifications.rs  queue.rs  queue_readiness.rs  resume_slice.rs  review.rs  review_record.rs  runner.rs  runtime.rs  scope_violation.rs  selected_slice.rs  shell.rs  state.rs  state_target.rs  state_transition.rs  state_update.rs  structural.rs  validation.rs  workspace_status.rs
harness/core/tests/: amend_scope.rs  cli_service_exclusion.rs  continue_slice.rs  execute_next_parallel_smoke.rs  finalize_buildable_gate.rs  finalize_slice.rs  finalize_verifies_write_set.rs  host_profile.rs  inference.rs  prepare_cohort.rs  prepare_dispatch.rs  prepare_next.rs  prepare_selected_slice.rs  project.rs  project_lock.rs  project_registry.rs  resume_slice.rs  review_decision.rs  review_decision_promotes_fresh_verdict.rs  review_record.rs  schema_files.rs  scope_violation.rs  state_update.rs  state_update_marker_placement.rs  state_update_origin.rs  structural_bold_headers.rs  structural_check.rs  structural_persona_drift.rs  structural_slice_blocker.rs  tiger_claw_verdict_parser.rs  transition_active_slice.rs  update_slice.rs
harness/schemas/: active-slice.schema.json  dispatch-log-entry.schema.json  finalize-result.schema.json  gate-verdict.schema.json  project-capsule.schema.json  queue.schema.json
harness/service/: Cargo.toml
harness/service/docs/: websocket.md
harness/service/src/: config.rs  lib.rs  main.rs  openapi.rs
harness/src/: activation.rs  adapter.rs  amend_scope.rs  cohort.rs  cohort_apply.rs  cohort_dispatch.rs  cohort_reconcile.rs  cohort_result.rs  cohort_worktree.rs  dashboard_server.rs  dispatch.rs  evidence.rs  finalize.rs  inference.rs  lib.rs  main.rs  model_registry.rs  notifications.rs  policy.rs  project.rs  queue.rs  queue_update.rs  resume_slice.rs  review.rs  review_record.rs  runner.rs  runtime.rs  selected_slice.rs  state.rs  state_transition.rs  state_update.rs  structural.rs  validation.rs
harness/tests/: amend_scope.rs  execute_next_parallel_smoke.rs  finalize_slice.rs  host_profile.rs  inference.rs  prepare_cohort.rs  prepare_dispatch.rs  prepare_next.rs  prepare_selected_slice.rs  project.rs  resume_slice.rs  review_decision.rs  review_record.rs  schema_files.rs  scope_violation.rs  state_update.rs  structural_check.rs  transition_active_slice.rs  update_slice.rs
(+199 files in other folders)
