[package]
name = "mutagen-harness"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mutagen-harness"
path = "src/main.rs"

[dependencies]
mutagen-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
globset.workspace = true
