[package]
name = "mutagen-service"
version.workspace = true
edition.workspace = true

[lib]
name = "mutagen_service"
path = "src/lib.rs"

[[bin]]
name = "mutagen-service"
path = "src/main.rs"

[dependencies]
mutagen-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml = "0.8"
subtle = "2.6"
utoipa.workspace = true
time.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
